# fuzztruction

./: .gitmodules  Cargo.toml
fuzztruction_shared/: Cargo.toml  core
fuzztruction_shared/src/: abi.rs  aux_stream.rs  bounded_set.rs  communication_channel.rs  constants.rs  dwarf.rs  finite_integer_set.rs  func.rs  func_addr.rs  func_block_addr.rs  iosync_channel.rs  lib.rs  log_utils.rs  messages.rs  mutation_cache.rs  mutation_cache_content.rs  mutation_cache_entry.rs  patching_cache.rs  patching_cache_content.rs  patching_cache_entry.rs  patchpoint.rs  patchpoint_flat.rs  serializer.rs  shared_memory.rs  tracing.rs  types.rs  util.rs  var.rs
generator/agent/: Cargo.toml  build.rs
generator/agent/src/: agent.rs  logging.rs
generator/agent/src/jit/: jit.rs
generator/pass/: Makefile  core  fuzztruction-preprocessing-pass.cc  fuzztruction-preprocessing-pass.hpp  fuzztruction-source-clang-fast.c  fuzztruction-source-llvm-pass.cc  iosync.h  pass_debug.info
lib/jail/src/: jail.rs  lib.rs  utils.rs
lib/proc-maps/: Cargo.toml
lib/proc-maps/src/: lib.rs  linux_maps.rs
scheduler/: Cargo.toml
scheduler/src/: checks.rs  config.rs  constants.rs  io_channels.rs  lib.rs  logging.rs  patchpoint.rs  sink.rs  sink_bitmap.rs  source.rs  trace.rs
scheduler/src/aflpp/: weizz.rs
scheduler/src/cli/: benchmark.rs  benchmark_sink.rs  fuzztruction.rs
scheduler/src/fuzzer/: campaign.rs  common.rs  event_counter.rs  mod.rs  worker.rs
scheduler/src/fuzzer/worker_impl/: cerebrum.rs  cerebrum_query.rs  common.rs  init.rs  mod.rs  mutators.rs  scheduling.rs
scheduler/src/fuzzer/worker_impl/phases/: add.rs  combine.rs  discovery.rs  mod.rs  mutate.rs  run_common.rs  run_phase.rs
scheduler/src/tracer/: core.rs
scheduler/src/valgrind/: core.rs
