[package]
name = "fuzztruction_shared"
version = "0.1.0"
authors = ["Nils Bars <nils.bars@rub.de>"]
edition = "2024"

[dependencies]
shared_memory = { git = "https://github.com/elast0ny/shared_memory-rs", rev = "4879c7641f64d444420b81fd32f496939ee7155d", package = "shared_memory" }
posixmq = "~0"
strum = "~0.27"
strum_macros = "~0.27"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
rmp-serde = "~1"
libc = "~0"
rand = "~0.9"
num_enum = "~0"
lazy_static = "~1"
signal-hook = "~0"
anyhow = "~1"
thiserror = "~1"
log = { version = "~0", features = ["kv_unstable", "serde"] }
fern = "~0"
md5 = "0.7.0"
nix = { version = "0.26", features = ["signal"] }
byte-unit = "4.0.13"
llvm_stackmap = { path = "../lib/llvm-stackmap-rs", features = ["serde"] }
proc-maps = { path = "../lib/proc-maps" }
ipmpsc = "~0"
ansi_term = "0.12"
chrono = "~0"
libafl = { version = "~0.15", features = ["prometheus_monitor"] }
libafl_bolts = "~0.15"
elf = "0.7.4"
bincode = "~1"
derive_more = { version = "~2", features = ["display"] }

[dependencies.memoffset]
version = "~0"
features = ["unstable_const"]
